--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-reader": "^0.17.10",
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.2.0",
+    "styled-components-breakpoint": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
