--- a/package.json
+++ b/package.json
@@ -3,17 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.18.2",
+    "babel-plugin-import": "^1.11.2",
+    "customize-cra": "^0.2.12",
+    "enquire-js": "^0.2.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "prop-types": "^15.7.2",
+    "rc-banner-anim": "^2.2.6",
+    "rc-queue-anim": "^1.6.12",
+    "rc-scroll-anim": "^2.5.7",
+    "rc-tween-one": "^2.4.1",
     "react": "^16.8.6",
+    "react-app-rewired": "^2.1.3",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-github-button": "^0.1.11",
     "react-reader": "^0.17.10",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.0",
     "styled-components-breakpoint": "^2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
