--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^16.8.6",
     "react-github-button": "^0.1.11",
     "react-reader": "^0.17.10",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "styled-components": "^4.2.0",
     "styled-components-breakpoint": "^2.1.1"
   },
