--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "enquire-js": "^0.2.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "rc-banner-anim": "^2.2.6",
     "rc-queue-anim": "^1.6.12",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0",
     "styled-components-breakpoint": "^2.1.1"
