--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.11",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "rc-banner-anim": "^2.2.6",
     "rc-queue-anim": "^1.6.12",
@@ -22,8 +23,10 @@
     "react-github-button": "^0.1.11",
     "react-reader": "^0.17.10",
     "react-redux": "^7.0.3",
+    "react-router": "latest",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
   }
 }
