--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "react-router": "latest",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.20",
+    "react-three-fiber": "^2.1.3",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0",
-    "styled-components-breakpoint": "^2.1.1"
+    "styled-components-breakpoint": "^2.1.1",
+    "three": "^0.104.0",
+    "lodash-es": "latest"
   },
   "scripts": {
     "start": "react-app-rewired start",
