修改阅读器加入工具栏，正在修改书签

--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "antd": "^3.19.1",
     "babel-plugin-import": "^1.11.2",
     "customize-cra": "^0.2.12",
     "enquire-js": "^0.2.1",
+    "epubjs": "^0.3.84",
     "http-proxy-middleware": "^0.19.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.11",
     "lodash-es": "latest",
+    "material-ui": "1.0.0-beta.47",
+    "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "rangy": "^1.3.0",
     "rc-banner-anim": "^2.2.6",
     "rc-queue-anim": "^1.6.12",
     "rc-scroll-anim": "^2.5.7",
