--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
     "react-github-button": "^0.1.11",
+    "react-persist": "^1.0.2",
     "react-reader": "^0.17.10",
     "react-redux": "^7.0.3",
     "react-router": "latest",
@@ -38,6 +39,7 @@
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0",
     "styled-components-breakpoint": "^2.1.1",
