--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mooooon333.github.io/epub-reading-platform",
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "antd": "^3.19.1",
@@ -9,6 +10,7 @@
     "customize-cra": "^0.2.12",
     "enquire-js": "^0.2.1",
     "epubjs": "^0.3.84",
+    "gh-pages": "^2.0.1",
     "http-proxy-middleware": "^0.19.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
@@ -46,6 +48,8 @@
     "three": "^0.104.0"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
