--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-persist": "^1.0.2",
     "react-reader": "^0.17.10",
     "react-redux": "^7.0.3",
-    "react-router": "latest",
+    "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-spring": "^8.0.20",
